# scoliosis-posture-visualizer

./: README.md  app.py  history_utils.py  pose_utils.py  pyproject.toml  requirements.txt
history/: history_meta.json
scripts/: setup_uv.ps1
